# ntcrack

./: Cargo.toml  README.md
ntcrack/: Cargo.toml  README.md
ntcrack/src/: main.rs
src/: main.rs  md4.rs
