[package]
name = "ntcrack"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
ripline = "0.1.0"
memmap2 = "0.5.3"
hash_hasher = "2.0.3"
#pprof = { version = "0.6.2", features = ["flamegraph"] }
crossbeam-channel = "0.5.2"
num_cpus = "1.13.1"
libc = "0.2.120"
page_size = "0.4.2"

[profile.release]
#strip = "symbols"
#debug = true
