[package]
name = "ntcrack"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
md4 = "0.9"
generic-array = "0.14.5"
#scoped_threadpool = "0.1.9"
ripline = "0.1.0"
memmap2 = "0.5.2"
#linereader = "0.4.0"
#rayon = "1.5.1"
hash_hasher = "2.0.3"
#pprof = { version = "0.6.2", features = ["flamegraph"] }
#bstr = "0.2.17"
crossbeam-channel = "0.5.2"

[profile.release]
#strip = "symbols"
#debug = true
